--- a/src/style/index.css
+++ b/src/style/index.css
@@ -31,3 +31,27 @@ body {
     color-stop(0.86, #7800ff)
   );
 }
+
+.default {
+  opacity: 0;
+}
+
+.enter-active {
+  opacity: 1 !important;
+  transition: opacity 200ms !important;
+}
+
+@keyframes teste {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1 !important;
+    transition: opacity 200ms !important;
+  }
+}
+
+.exit-active {
+  opacity: 0 !important;
+  transition: opacity 200ms !important;
+}
